# smpl

./: .gitignore  README.md
sbpl_collision_checking/: CMakeLists.txt  package.xml
sbpl_collision_checking/include/sbpl_collision_checking/: allowed_collisions_interface.h  attached_bodies_collision_model.h  attached_bodies_collision_state.h  base_collision_models.h  base_collision_states.h  body_collision_model.h  collision_model_config.h  collision_space.h  conversions.h  robot_collision_model.h  robot_collision_state.h  robot_motion_collision_model.h  self_collision_model.h  shape_visualization.h  shapes.h  types.h  voxel_operations.h  voxelize_collision_object.h  voxelize_collision_object_msg.h  voxelize_world_object.h  world_collision_detector.h  world_collision_model.h
sbpl_collision_checking/src/: attached_bodies_collision_model.cpp  attached_bodies_collision_state.cpp  base_collision_models.cpp  base_collision_states.cpp  collision_model_config.cpp  collision_operations.cpp  collision_operations.h  collision_space.cpp  conversions.cpp  robot_collision_model.cpp  robot_collision_state.cpp  robot_motion_collision_model.cpp  self_collision_model.cpp  shape_visualization.cpp  transform_functions.h  types.cpp  voxel_operations.cpp  world_collision_detector.cpp  world_collision_model.cpp
sbpl_collision_checking_test/: CMakeLists.txt
sbpl_collision_checking_test/src/: benchmark_cc.cpp  test_collision_model.cpp  test_collision_space.cpp
sbpl_kdl_robot_model/: CMakeLists.txt  package.xml
sbpl_kdl_robot_model/include/sbpl_kdl_robot_model/: kdl_robot_model.h
sbpl_kdl_robot_model/src/: kdl_robot_model.cpp  test_kdl_robot_model.cpp
sbpl_pr2_robot_model/: CMakeLists.txt  package.xml
sbpl_pr2_robot_model/include/sbpl_pr2_robot_model/: orientation_solver.h  pr2_kdl_robot_model.h  pr2_robot_model.h  ubr1_kdl_robot_model.h
sbpl_pr2_robot_model/src/: orientation_solver.cpp  pr2_kdl_robot_model.cpp  pr2_robot_model.cpp  ubr1_kdl_robot_model.cpp
smpl/: CMakeLists.txt  package.xml  smpl-config-version.cmake.in  smpl-config.cmake.in
smpl/include/smpl/: algorithm.h  angles.h  collision_checker.h  config.h.in  csv_parser.h  defer.h  extension.h  occupancy_grid.h  planning_params.h  post_processing.h  robot_model.h  spatial.h  time.h  types.h
smpl/src/: bfs3d.cpp  collision_checker.cpp  csv_parser.cpp  occupancy_grid.cpp  planning_params.cpp  post_processing.cpp  profiling.h  robot_model.cpp
smpl/src/bfs3d/: bfs3d.cpp
smpl/src/debug/: colors.cpp  marker_utils.cpp  visualize.cpp
smpl/src/distance_map/: chessboard_distance_map.cpp  distance_map_common.cpp  edge_euclid_distance_map.cpp  euclid_distance_map.cpp  sparse_distance_map.cpp
smpl/src/geometry/: bounding_spheres.cpp  intersect.cpp  mesh_utils.cpp  voxelize.cpp
smpl/src/graph/: action_space.cpp  adaptive_workspace_lattice.cpp  cost_function.cpp  discrete_space.cpp  experience_graph.cpp  goal_constraint.cpp  manip_lattice.cpp  manip_lattice_action_space.cpp  manip_lattice_egraph.cpp  manip_lattice_types.cpp  manipulation_action_space.cpp  robot_planning_space.cpp  roman_workspace_lattice_action_space.cpp  simple_workspace_lattice_action_space.cpp  workspace_lattice.cpp  workspace_lattice_action_space.cpp  workspace_lattice_base.cpp  workspace_lattice_egraph.cpp  workspace_projection.cpp
smpl/src/heuristic/: attractor_heuristic.cpp  bfs_heuristic.cpp  egraph_bfs_heuristic.cpp  euclid_dist_heuristic.cpp  generic_egraph_heuristic.cpp  heuristic.cpp  joint_dist_heuristic.cpp  multi_frame_bfs_heuristic.cpp  object_manip_heuristic.cpp  robot_heuristic.cpp  soft_bfs_heuristic.cpp  sparse_egraph_dijkstra_heuristic.cpp  zero_heuristic.cpp
smpl/src/search/: adaptive_planner.cpp  arastar.cpp  awastar.cpp  experience_graph_planner.cpp  fmhastar.cpp  island_search.cpp  lazy_arastar.cpp  lazy_mhastar.cpp  meta_mhastar_dts.cpp  mhastar_base.cpp  mhastar_base_impl.h  mhastar_base_impl.hpp  mhastarpp.cpp  search.cpp  smhastar.cpp  umhastar.cpp
smpl/src/steer/: steer.cpp
smpl/src/unicycle/: dubins.cpp  unicycle.cpp
smpl_moveit_interface/: CMakeLists.txt  move_group_command_panel_plugin_description.xml  package.xml
smpl_moveit_interface/src/interface/: utils.cpp  (+9 more)
smpl_ompl/: CMakeLists.txt  package.xml
smpl_ompl/src/: smpl_ompl.cpp
smpl_ompl_interface/: CMakeLists.txt  package.xml
smpl_ompl_interface/src/: ompl_interface.cpp  smpl_ompl.cpp
smpl_ros/: CMakeLists.txt  package.xml
smpl_ros_interface/: CMakeLists.txt  package.xml
smpl_ros_interface/src/: factories.cpp  planner_interface.cpp
smpl_test/: CMakeLists.txt  package.xml
smpl_test/config/: bfs-1.yaml  bfs.yaml  manip_lattice.yaml  pr2_right_arm.yaml  rosconsole.properties  smpl_visual.ini  xy_8_connected.mprim
smpl_test/data/: trajectory.csv
smpl_test/experiments/: pr2_goal.yaml
smpl_test/launch/: call_ompl_planner.launch  fake_pr2_state.launch  goal_pr2.launch  grid_world_test.launch  test_ara_bfs_jsl.launch  test_ara_bfs_wsl.launch  test_ara_ed_wsl.launch  test_ara_egd_egjsl.launch  test_ara_jd_jsl.launch  test_ara_mfbfs_jsl.launch  test_common.launch.xml  test_fmha_bfs_jsl.launch  test_mhapp_bfs_jsl.launch  test_smha_bfs_jsl.launch  test_umha_bfs_jsl.launch
smpl_test/src/: call_ompl_planner.cpp  call_planner.cpp  collision_space_scene.cpp  collision_space_scene.h  csv_parser_test.cpp  debug_vis_demo.cpp  distance_map_test.cpp  egraph_test.cpp  factories.cpp  factories.h  heap_test.cpp  occupancy_grid_test.cpp  octree_tests.cpp  robot_model_test.cpp  sparse_binary_grid_test.cpp  sparse_grid_test.cpp  test_ara_bfs_jsl.cpp  test_ara_bfs_wsl.cpp  test_ara_ed_wsl.cpp  test_ara_egd_egjsl.cpp  test_ara_jd_jsl.cpp  test_ara_mfbfs_jsl.cpp  test_planner.cpp  test_scenario.cpp  test_scenario.h  test_smha_bfs_jsl.cpp  visualizer_test.cpp  xytheta.cpp
smpl_urdf_robot_model/: CMakeLists.txt  package.xml  smpl_urdf_robot_model-config-version.cmake.in  smpl_urdf_robot_model-config.cmake.in
smpl_urdf_robot_model/src/: robot_model.cpp  robot_model_test.cpp  robot_state.cpp  robot_state_bounds.cpp  robot_state_visualization.cpp  urdf_robot_model.cpp
(+140 files in other folders)
